fix: prevent duplicate menu entries in restaurant rate detail response